--- a/includes/CMakeLists.txt
+++ b/includes/CMakeLists.txt
@@ -1,10 +1,1 @@
-add_subdirectory(Event)
-
-target_sources(ecs PUBLIC
-    EwECS.hpp
-    SparseArray.hpp
-    Utils.hpp
-    World.hpp
-)
-
-target_include_directories(ecs PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
+add_subdirectory(EwECS)
