--- a/includes/EwECS/CMakeLists.txt
+++ b/includes/EwECS/CMakeLists.txt
@@ -8,6 +8,7 @@ target_sources(ecs PUBLIC
     SparseArray.hpp
     Utils.hpp
     World.hpp
+    IPlugin.hpp
 )
 
 target_include_directories(ecs PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
