Added base for rendering lib

--- a/includes/EwECS/SFMLDisplayClass/CMakeLists.txt
+++ b/includes/EwECS/SFMLDisplayClass/CMakeLists.txt
@@ -1,6 +1,7 @@
 target_sources(ecs PUBLIC
     SFMLDisplayClass.hpp
     LoadedSprite.hpp
+    RenderPlugin.hpp
 )
 
 target_include_directories(ecs PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
