Add the Sound component Add the Sound handler in the ecs

--- a/includes/EwECS/CMakeLists.txt
+++ b/includes/EwECS/CMakeLists.txt
@@ -2,6 +2,8 @@ add_subdirectory(Event)
 add_subdirectory(SFMLDisplayClass)
 add_subdirectory(ConfigReader)
 add_subdirectory(Asset)
+add_subdirectory(Components)
+add_subdirectory(Sound)
 
 target_sources(ecs PUBLIC
     EwECS.hpp
