--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,6 +2,7 @@ add_subdirectory(Event)
 add_subdirectory(SFMLDisplayClass)
 add_subdirectory(ConfigReader)
 add_subdirectory(Asset)
+add_subdirectory(Sound)
 
 target_sources(ecs PRIVATE
     World.cpp
