--- a/includes/EwECS/Event/CMakeLists.txt
+++ b/includes/EwECS/Event/CMakeLists.txt
@@ -4,6 +4,7 @@ target_sources(ecs PUBLIC
     KeyboardEvent.hpp
     WindowEvent.hpp
     MouseEvent.hpp
+    SoundEvent.hpp
 )
 
 target_include_directories(ecs PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
