Changed to PUBLIC includes directories

--- a/includes/EwECS/SFMLDisplayClass/CMakeLists.txt
+++ b/includes/EwECS/SFMLDisplayClass/CMakeLists.txt
@@ -4,4 +4,4 @@ target_sources(ecs PUBLIC
     RenderPlugin.hpp
 )
 
-target_include_directories(ecs PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
+target_include_directories(ecs PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
