--- a/src/ConfigReader/CMakeLists.txt
+++ b/src/ConfigReader/CMakeLists.txt
@@ -2,4 +2,4 @@ target_sources(ecs PRIVATE
     ${CMAKE_CURRENT_SOURCE_DIR}/ConfigReader.cpp
     )
 
-target_include_directories(ecs PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
+target_include_directories(ecs PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
