--- a/includes/EwECS/CMakeLists.txt
+++ b/includes/EwECS/CMakeLists.txt
@@ -14,4 +14,4 @@ target_sources(ecs PUBLIC
     IPlugin.hpp
 )
 
-target_include_directories(ecs PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
+target_include_directories(ecs PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
