--- a/includes/EwECS/Components/CMakeLists.txt
+++ b/includes/EwECS/Components/CMakeLists.txt
@@ -2,4 +2,4 @@ target_sources(ecs PUBLIC
         Components+Sounds.hpp
 )
 
-target_include_directories(ecs PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
+target_include_directories(ecs PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
