--- a/includes/EwECS/Event/CMakeLists.txt
+++ b/includes/EwECS/Event/CMakeLists.txt
@@ -7,4 +7,4 @@ target_sources(ecs PUBLIC
     SoundEvent.hpp
 )
 
-target_include_directories(ecs PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
+target_include_directories(ecs PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
