--- a/src/Asset/CMakeLists.txt
+++ b/src/Asset/CMakeLists.txt
@@ -2,4 +2,4 @@ target_sources(ecs PRIVATE
     AssetManager.cpp
     )
 
-target_include_directories(ecs PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
+target_include_directories(ecs PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
