--- a/src/Event/CMakeLists.txt
+++ b/src/Event/CMakeLists.txt
@@ -6,4 +6,4 @@ target_sources(ecs PRIVATE
     ${CMAKE_CURRENT_SOURCE_DIR}/SoundEvent.cpp
     )
 
-target_include_directories(ecs PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
+target_include_directories(ecs PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
