--- a/src/SFMLDisplayClass/CMakeLists.txt
+++ b/src/SFMLDisplayClass/CMakeLists.txt
@@ -3,4 +3,4 @@ target_sources(ecs PRIVATE
     ${CMAKE_CURRENT_SOURCE_DIR}/RenderPlugin.cpp
     )
 
-target_include_directories(ecs PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
+target_include_directories(ecs PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
