--- a/src/Music/CMakeLists.txt
+++ b/src/Music/CMakeLists.txt
@@ -1,6 +1,6 @@
 target_sources(ecs PRIVATE
-    Sound.cpp
-    SoundPlugin.cpp
+    Music.cpp
+    MusicPlugin.cpp
 )
 
 target_include_directories(ecs PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
